--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -43,7 +43,7 @@
 						<li>You may quote extracts from the website with attribution to footballbyfootball.com</li>
 					</ol>
 
-					<p>For any other mode of sharing, please contact the owner at <a href="mailto:mchatham58@live.com">mchatham58@live.com</a>
+					<p>For any other mode of sharing, please contact the owner at <a href="mailto:footballbyfootball@gmail.com">footballbyfootball@gmail.com</a>
 
 					<p>Commercial use and distribution of the contents of the website is not allowed without express and prior written consent of the owner.
 				</div>
