--- a/views/new_lockerroom.ejs
+++ b/views/new_lockerroom.ejs
@@ -2,7 +2,11 @@
 
 	<div class="lockerroom-header" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/sansjags_backer.jpg);">
 
-		<h1 class="title"><%= lockerroom.title %>
+		<h1 class="title">
+		<% if (lockerroom.main_image.image_url) { %>
+			<img src="https://s3.amazonaws.com/footballbyfootball-dev<%= lockerroom.main_image.image_url %>" />
+		<% } %>
+		<%= lockerroom.title %>
 		<% if (locals.user) { %>
 			<a href="/lockerroom/<%= lockerroom.slug %>/edit"> Edit</a>
 		<% } %><br><span class="subtitle">Click on the Heads to see their Responses!</span></h1>
@@ -13,6 +17,10 @@
 			<div class="container response-wrapper">		
 				<% lockerroom.lockerentries.forEach(function(entry, index) { %>
 					<div class="row response" id="<%= entry.player._id %>">
+						<span class="lockerroom-response-player">
+							<div class="author-image" style="background-image: url(<%= entry.player.image_url %>)"></div>
+							<div class="player-name"><%= entry.player.name %></div>
+						</span>
 						<div class="lockerroom-entry">
 							<div class="lockerrooom-entry-content cf">
 								<% entry.data.forEach(function(item){ %>
@@ -27,8 +35,10 @@
 									<% } %>
 								<% }); %>
 							</div>
+
 						</div>
 					</div>
+
 				<% }); %>
 			</div>
 		</div>
@@ -36,7 +46,9 @@
 			<div class="locker-author-wrap">
 				<% lockerroom.lockerentries.forEach(function(entry, index) { %>
 					<div class="author-image-wrap">
-						<span class="lockerroom-response-control" data-id="<%= entry.player._id %>"><div class="author-image" style="background-image: url(<%= entry.player.image_url %>)"></div></span>
+						<span class="lockerroom-response-control" data-id="<%= entry.player._id %>">
+							<div class="author-image" style="background-image: url(<%= entry.player.image_url %>)"></div>
+						</span>
 					</div>
 				<% });%>
 			</div>		
