Click on the Circles to See Our Responses

--- a/views/new_lockerroom.ejs
+++ b/views/new_lockerroom.ejs
@@ -9,7 +9,7 @@
 		<%= lockerroom.title %>
 		<% if (locals.user) { %>
 			<a href="/lockerroom/<%= lockerroom.slug %>/edit"> Edit</a>
-		<% } %><br><span class="subtitle">Click on the Heads to see their Responses!</span></h1>
+		<% } %><br><span class="subtitle">Click on the Circles to See Our Responses!</span></h1>
 		<div class="lockerroom-responses">
 			<span class="close-lockerroom-responses">×</span>
 			<span class="next-lockerroom-response"></span>
