--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -2073,7 +2073,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 }
 
 .error {
-	text-align: left;
+	text-align: center;
 }
 
 @media (max-width: 991px) {
