--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,12 +17,11 @@
 							<% entry = entries[2]%><%= include medium-select %>
 						</div>
 						<div class="col-md-6">
-							<!-- yb_Football_By_Football -->
-							<div id='div-gpt-ad-1415039200042-0'>
-							<script type='text/javascript'>
-							googletag.cmd.push(function() { googletag.display('div-gpt-ad-1415039200042-0'); });
+							<script src="https://www.googletagservices.com/tag/js/gpt.js">
+								googletag.pubads().definePassback("/20893548/yb/
+								footballbyfootball",
+								[300,250]).setClickUrl("%%CLICK_URL_UNESC%%").display();
 							</script>
-							</div>
 						</div>
 					</div>
 					<div class="row">
@@ -64,9 +63,7 @@
 				</div>
 			</div>
 
-		  	<div class="row">
-				<hr>
-			</div>
+		  	<div class="row"><hr></div>
 
 			<div class="row">
 				<div class="col-md-8">
@@ -117,11 +114,11 @@
 
 
 					<!-- yb_Football_By_Football -->
-					<div id='div-gpt-ad-1415039200042-2'>
-					<script type='text/javascript'>
-					googletag.cmd.push(function() { googletag.display('div-gpt-ad-1415039200042-2'); });
+					<script src="https://www.googletagservices.com/tag/js/gpt.js">
+						googletag.pubads().definePassback("/20893548/yb/
+						footballbyfootball",
+						[160,600]).setClickUrl("%%CLICK_URL_UNESC%%").display();
 					</script>
-					</div>
 				</div>
 			</div>
 			<div class="row">
