--- a/views/header.ejs
+++ b/views/header.ejs
@@ -46,6 +46,16 @@
 		})();
 	</script>
 
+	<script type='text/javascript'>
+		googletag.cmd.push(function() {
+		googletag.defineSlot('/5702/yb_Football_By_Football', [[300, 250]], 'div-gpt-ad-1415039200042-0').addService(googletag.pubads());
+		googletag.defineSlot('/5702/yb_Football_By_Football', [[728, 90]], 'div-gpt-ad-1415039200042-1').addService(googletag.pubads());
+		googletag.defineSlot('/5702/yb_Football_By_Football', [[160, 600]], 'div-gpt-ad-1415039200042-2').addService(googletag.pubads());
+		googletag.pubads().enableSingleRequest();
+		googletag.enableServices();
+		});
+	</script>
+
 </head>
 <body class="<% if (locals.page_type) {%><%= page_type %><%} %>" >
 	<% if (locals.page_type && page_type =='home') {%>
