--- a/views/header.ejs
+++ b/views/header.ejs
@@ -49,15 +49,14 @@
 		node.parentNode.insertBefore(gads, node);
 		})();
 	</script>
-	
+
 </head>
 <body class="<% if (locals.page_type) {%><%= page_type %><%} %>" >
 	<% if (locals.page_type && page_type =='home') {%>
 	<div class="masthead">
 		<div class="top-banner-container">	
 			<script src="https://www.googletagservices.com/tag/js/gpt.js">
-				googletag.pubads().definePassback("/20893548/yb/
-				footballbyfootball",
+				googletag.pubads().definePassback("/20893548/yb/footballbyfootball",
 				[728,90]).setClickUrl("%%CLICK_URL_UNESC%%").display();
 			</script>
 		</div>
