--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,7 @@
 						</div>
 						<div class="col-md-6">
 							<script src="https://www.googletagservices.com/tag/js/gpt.js">
-								googletag.pubads().definePassback("/20893548/yb/
-								footballbyfootball",
+								googletag.pubads().definePassback("/20893548/yb/footballbyfootball",
 								[300,250]).setClickUrl("%%CLICK_URL_UNESC%%").display();
 							</script>
 						</div>
@@ -115,8 +114,7 @@
 
 					<!-- yb_Football_By_Football -->
 					<script src="https://www.googletagservices.com/tag/js/gpt.js">
-						googletag.pubads().definePassback("/20893548/yb/
-						footballbyfootball",
+						googletag.pubads().definePassback("/20893548/yb/footballbyfootball",
 						[160,600]).setClickUrl("%%CLICK_URL_UNESC%%").display();
 					</script>
 				</div>
