--- a/views/actual_column.ejs
+++ b/views/actual_column.ejs
@@ -58,6 +58,7 @@
 						<div class="author-square" style="background-image: url(<%= column.player.image_url %>)"></div>
 						<div class="content">
 							<%- column.player.description %>
+							<!-- <a href="/writer/<%= column.player.slug %>">More From <%= column.player.name %></a> -->
 						</div>
 					</div>
 					<div class="under-author desktop">
