--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1589,6 +1589,11 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .error {
   text-align: center; }
 
+.bio .bio_title {
+  text-align: center; }
+.bio .bio_content {
+  padding-bottom: 50px; }
+
 @media (min-width: 992px) {
   .lockerroom .lockerroom-controls .author-image-wrap .author-image {
     height: 100px;
