--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -2077,6 +2077,15 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	text-align: center;
 }
 
+.bio {
+	.bio_title {
+		text-align: center;
+	}
+	.bio_content {
+		padding-bottom: 50px;
+	}
+}
+
 @media (min-width: 992px) {
 	.lockerroom .lockerroom-controls .author-image-wrap .author-image{
 		height: 100px;
