--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -62,6 +62,8 @@
 	</div>
 	<script src="/js/app.js"></script>
 
+	<script type="text/javascript" src="/js/podcast.min.js"></script>
+
 	<script src="http://network.yardbarker.com/network/ybn_pixel/12986" type="text/javascript"></script> <noscript></noscript>
 
 	<script>
