--- a/views/header.ejs
+++ b/views/header.ejs
@@ -78,13 +78,13 @@
 
 	<div class="topbar">
 		<div class="container cf">
-		<% if (locals.page_type && page_type =='home') {%>
-			<p class="today">Today, <%= today %></p>
-		<% } else if (locals.page_type && page_type =='lockerroom') { %>
-			<div class="logo"><a href="/"><img src="/img/logo-whitebanner.png" alt=""></a></div>
-		<% } else { %>
-			<div class="logo"><a href="/"><img src="/img/logo-blackbanner.png" alt=""></a></div>
-		<% } %>
+			<% if (locals.page_type && page_type =='home') {%>
+				<p class="today">Today, <%= today %></p>
+			<% } else if (locals.page_type && page_type =='lockerroom') { %>
+				<div class="logo"><a href="/"><img src="/img/logo-whitebanner.png" alt=""></a></div>
+			<% } else { %>
+				<div class="logo"><a href="/"><img src="/img/logo-blackbanner.png" alt=""></a></div>
+			<% } %>
 			<div class="right-side">
 				<a href="/lockerrooms" class="article-links">Locker Rooms</a>
 				<a href="/columns" class="article-links">Columns</a>
@@ -97,5 +97,7 @@
 			  <span class="lines"></span>
 			</div>
 		</div>
+		<div class="podcast" id="podcast">
 
+		</div>
 	</div>
