--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7,6 +7,10 @@ body {
   font-size: 16px;
   word-break: break-word; }
 
+.container {
+  position: relative;
+  overflow: hidden; }
+
 body.column {
   background: #fff; }
 
@@ -822,7 +826,7 @@ img {
   padding: 20px;
   line-height: 15px;
   cursor: pointer;
-  transition: .15s ease-in-out;
+  transition: 0.15s ease-in-out;
   z-index: 10; }
 
 .close-lockerroom-responses:hover {
@@ -841,7 +845,7 @@ img {
   top: 50%;
   margin-top: -21px;
   cursor: pointer;
-  transition: .15s ease-in-out;
+  transition: 0.15s ease-in-out;
   z-index: 10; }
 
 .next-lockerroom-response:hover {
@@ -860,7 +864,7 @@ img {
   top: 50%;
   margin-top: -21px;
   cursor: pointer;
-  transition: .15s ease-in-out;
+  transition: 0.15s ease-in-out;
   z-index: 10; }
 
 .prev-lockerroom-response:hover {
@@ -1146,7 +1150,7 @@ img {
   .column .column-content-wrapper p:first-child:first-letter {
     float: left;
     display: block;
-    margin: .15em .15em 0 0;
+    margin: 0.15em 0.15em 0 0;
     font-weight: 900;
     font-size: 75px;
     line-height: 50px;
@@ -1598,6 +1602,87 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .bio .bio_content {
   padding-bottom: 50px; }
 
+.podcastbutton {
+  height: 30px;
+  width: 30px;
+  background: white;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: 0.15s ease-out;
+  position: relative;
+  display: inline-block;
+  margin: 10px;
+  vertical-align: middle;
+  overflow: hidden;
+  opacity: 0.9;
+  float: left; }
+
+.podcastbutton:hover {
+  opacity: 1; }
+
+.play.podcastbutton:after {
+  content: '';
+  position: absolute;
+  display: block;
+  border: 8px solid white;
+  border-left: red solid 13px;
+  top: 7px;
+  left: 11px; }
+
+.pause.podcastbutton:after, .pause.podcastbutton:before {
+  content: '';
+  position: absolute;
+  background: red;
+  height: 16px;
+  width: 4px;
+  display: block;
+  top: 7px; }
+
+.podcast_label {
+  font-weight: bold;
+  background: white;
+  color: red;
+  line-height: 50px;
+  display: inline-block;
+  padding: 0 25px;
+  font-size: 20px;
+  vertical-align: middle;
+  margin: 0;
+  font-family: "museo-slab", serif;
+  text-shadow: 1px 1px 0px #a78039, 2px 2px 0px black;
+  float: left; }
+
+.podcast_progress {
+  padding-right: 20px;
+  float: left;
+  font-size: 12px;
+  line-height: 50px; }
+
+.pause.podcastbutton:before {
+  left: 9px; }
+
+.pause.podcastbutton:after {
+  right: 9px; }
+
+.podcast_icons {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: red; }
+  .podcast_icons a.podcast_icon {
+    color: white;
+    font-size: 25px;
+    padding: 0 10px;
+    line-height: 50px; }
+
+.podcast_title {
+  display: inline-block;
+  width: 60%;
+  vertical-align: middle;
+  float: left;
+  position: absolute;
+  font-family: "museo-slab", serif; }
+
 @media (min-width: 992px) {
   .lockerroom .lockerroom-controls .author-image-wrap .author-image {
     height: 100px;
@@ -1777,7 +1862,9 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
       border-bottom: none; }
   .lockerroom-controls .author-image-wrap .author-image:hover {
     z-index: auto;
-    box-shadow: none; } }
+    box-shadow: none; }
+  .podcast_progress, .podcast_title {
+    display: none; } }
 
 div[id^="grabDiv"] {
   width: 100% !important;
