--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,12 +4,12 @@
 	<title>Football by Football</title>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="/css/app.css">
 
 	<% if (locals.user) { %>
-		<link rel="stylesheet" href="/css/trumbowyg.css">
-		<link rel="stylesheet" href="/css/ui/trumbowyg.colors.css">
+		<link rel="stylesheet" href="/css/trumbowyg2.css">
+		<link rel="stylesheet" href="/css/ui/trumbowyg2.colors.css">
 	<% } %>
+	<link rel="stylesheet" href="/css/app.css">
 
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 
