--- a/views/actual_column.ejs
+++ b/views/actual_column.ejs
@@ -35,7 +35,7 @@
 				<div class="column-content-wrapper cf">
 					<% column.data.forEach(function(item){ %>
 						<% if (item.type == 'content') { %>
-							<p><%- item.content %></p>
+							<%- item.content %>
 						<%}%>
 						<% if (item.type == 'image') { %>
 							<div class="caption-image <%= item.image_type %>">
