--- a/sass/css/app.scss
+++ b/sass/css/app.scss
@@ -1868,7 +1868,7 @@ a:hover {
 }
 
 .adminbar {
-	background: red;
+	background: #a78039;
 	a { 
 		padding: 0 15px;
 		line-height: 50px;
@@ -2499,6 +2499,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 			}
 
 		}
+	}
+
+	.podcast_label {
+		font-size: 20px;
 	}
 
 	.podcast_progress, .podcast_title {
