--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,18 @@
-	<div class="footer">
+	<div class="footer" id="footer">
 		<div class="container">
 			<div class="row">
+				<div class="col-md-4">
+					<h3>Content</h3>
+					<p><a href="/lockerrooms" class="footer-links">Locker Rooms</a></p>
+					<p><a href="/columns" class="footer-links">Columns</a></p>
+					<p><a href="/locks" class="footer-links">Locks</a></p>
+					<p><a href="/fantasy" class="footer-links">Fantasy</a></p>
+				</div>
+				<div class="col-md-4">
+					<h3>Information</h3>
+					<p><a href="/about" class="footer-links">About Football by Football</a></p>
+					<p><a href="/privacyandterms" class="footer-links">Privacy & Terms of Service</a></p>
+				</div>
 				<div class="col-md-4">
 					<h3>Join Our Newsletter</h3>
 					<form action="http://footballbyfootball.createsend.com/t/t/s/ijjdkl/" method="post">
@@ -18,46 +30,11 @@
 					</form>
 					<a href="http://www.yardbarker.com/"><img border="0" width="100" src="http://www.yardbarker.com/images/ybn/badge_100.gif" height="50"/></a>
 				</div>
-				<div class="col-md-8">
-					<h3>About Football by Football</h3>
-					<p>FootballByFootball.com is a football analysis website providing unique player-writer generated content; owned & operated by experienced football players. 
-					 
-					<p>Experience counts immensely—especially in analyzing the world’s most complex sport.  A tiny percentage of the writing population has football experience.  This is a disparity we aim to change.     
-					 
-					<p>Football fans crave insight.  So, when the world orders a steak, you don’t butcher a chicken. 
-					 
-					<p>Welcome to FootballByFootball.com.
-				</div>
 			</div>
-			<div class="row">
-				<hr>
-				<div class="col-md-12" style="font-size: 0.7em;">
-					<p>© Football By Football, LLC  
-					<p>All Rights Reserved
-					<p>No part of this website or any of its contents may be reproduced, copied, modified or adapted, without the prior written consent of the author, unless otherwise indicated for stand-alone materials.
-
-					<p>You may share this website by any of the following means:
-					<ol>
-						<li>Using any of the share icons found on the page (Twitter, Facebook, Google+, Reddit, etc);</li>
-						<li>Providing a back-link or the URL of the content you wish to disseminate; and</li>
-						<li>You may quote extracts from the website with attribution to footballbyfootball.com</li>
-					</ol>
-
-					<p>For any other mode of sharing, please contact the owner at <a href="mailto:footballbyfootball@gmail.com">footballbyfootball@gmail.com</a>
-
-					<p>Commercial use and distribution of the contents of the website is not allowed without express and prior written consent of the owner.
-				</div>
+			<div class="row copyright">
+				<p>© Football By Football, LLC
+				<p>All Rights Reserved
 			</div>
-			<div class="row">
-				<hr>
-				<div class="col-md-12" style="font-size: 0.7em;">
-					<h4>Privacy Policy</h4>
-					<p>We use third-party advertising companies to serve ads when you visit our Web site. 
-					These companies may use aggregated information (not including your name, address, email address or telephone number) about your visits to this and other Web sites in order to provide advertisements about goods and services of interest to you. If you would like more information about this practice and to know your choices about not having this information used by these companies, 
-					please see: <a href="http://www.networkadvertising.org/managing/opt_out.asp">http://www.networkadvertising.org/managing/opt_out.asp</a></p>
-				</div>
-			</div>
-		</div>
 		
 	</div>
 	<script src="/js/app.js"></script>
