--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,8 +15,8 @@
 
 	<script src="/js/jquery.1.9.min.js"></script>
 
-	<script type="text/javascript" src="//use.typekit.net/vnz8awm.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+	<script src="//use.typekit.net/eas6pwy.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
 
 	<meta property="fb:app_id"          content="832186156805952" /> 
 
@@ -90,8 +90,9 @@
 				<a href="/columns" class="article-links">Columns</a>
 				<a href="/locks" class="article-links">Locks</a>
 				<a href="/fantasy" class="article-links">Fantasy</a>
-				<a href="https://twitter.com/FBbyFB" target="_blank" class="article-links social"><span class="fa fa-twitter"></span></a>
-				<a href="https://www.facebook.com/FootballByFootball"  target="_blank" class="article-links social"><span class="fa fa-facebook"></span></a>
+				<a href="#footer" target="_blank" class="article-links social subscribe"><span class="fa fa-envelope"></span></a>
+				<a href="https://twitter.com/FBbyFB" target="_blank" class="article-links social twitter"><span class="fa fa-twitter"></span></a>
+				<a href="https://www.facebook.com/FootballByFootball"  target="_blank" class="article-links social facebook"><span class="fa fa-facebook"></span></a>
 			</div>
 			<div class="lines-button" type="button" role="button">
 			  <span class="lines"></span>
