--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -609,10 +609,11 @@ img {
     background: red; }
   .topbar .right-side {
     display: inline-block;
+    font-family: "abril-titling-condensed", sans-serif;
     font-size: 0;
     float: right; }
     .topbar .right-side .article-links {
-      font-size: 15px;
+      font-size: 16px;
       color: white;
       margin: 0;
       padding: 0 10px; }
@@ -631,6 +632,10 @@ img {
     .lockerroom .topbar .article-links:hover {
       text-decoration: underline;
       color: black; }
+    .lockerroom .topbar .article-links.social {
+      color: white; }
+  .lockerroom .topbar .podcast {
+    color: white; }
 
 .lockerroom.editor .lockerroom-entry {
   background: white;
@@ -1148,57 +1153,83 @@ img {
   .column-title input:focus {
     outline: none; }
 
-.column {
-  margin: 25px 0 0; }
-  .column .column-content-wrapper {
-    margin: 0 0 50px; }
-  .column .column-content-wrapper p:first-child:first-letter {
-    float: left;
+.column .column-content-wrapper {
+  margin: 0 0 50px; }
+.column .column-content-wrapper p:first-child:first-letter {
+  float: left;
+  display: block;
+  margin: 0.15em 0.15em 0 0;
+  font-weight: 900;
+  font-size: 75px;
+  line-height: 50px;
+  font-family: "abril-titling-condensed", sans-serif; }
+.column .column-content-wrapper blockquote p:first-child:first-letter {
+  float: none;
+  display: inline;
+  margin: 0;
+  font-weight: normal;
+  font-size: inherit;
+  line-height: inherit;
+  font-family: inherit; }
+.column .column-header {
+  border-bottom: 1px solid #ddd; }
+  .column .column-header .top {
+    background: black;
+    padding: 15px; }
+    .column .column-header .top .byline {
+      color: white; }
+      .column .column-header .top .byline .author-image {
+        height: 30px;
+        width: 30px; }
+  .column .column-header .title {
+    font-size: 30px;
+    line-height: 1.3;
+    color: white;
     display: block;
-    margin: 0.15em 0.15em 0 0;
-    font-weight: 900;
-    font-size: 75px;
-    line-height: 50px;
-    font-family: "abril-titling-condensed", sans-serif; }
-  .column .column-header {
-    border-bottom: 1px solid #ddd; }
-    .column .column-header .title {
-      font-size: 60px; }
-      .column .column-header .title input {
-        border: none;
-        -webkit-appearance: none;
-        outline: none;
-        width: 100%;
-        border-bottom: 1px solid #ddd; }
-    .column .column-header .subtitle input {
-      width: 100%;
-      border: none;
-      outline: none; }
-    .column .column-header .date {
-      color: #999;
-      display: inline-block; }
-    .column .column-header .approved-check {
-      display: inline-block;
-      float: right; }
-    .column .column-header .add-main-image {
-      cursor: pointer;
-      opacity: 0.7;
-      transition: 0.15s ease-in-out; }
-      .column .column-header .add-main-image:hover {
-        opacity: 1; }
-    .column .column-header .image-uploader {
-      background: #eee; }
-    .column .column-header .caption-input {
+    margin-bottom: 10px;
+    margin-top: 0; }
+    .column .column-header .title input {
       border: none;
       -webkit-appearance: none;
       outline: none;
-      border-bottom: 1px solid #ddd;
       width: 100%;
-      line-height: 2; }
-    .column .column-header .close-link {
-      display: none; }
-    .column .column-header .active .close-link {
-      display: block; }
+      border-bottom: 1px solid #ddd; }
+  .column .column-header .byline {
+    display: none; }
+  .column .column-header .subtitle input {
+    width: 100%;
+    border: none;
+    outline: none; }
+  .column .column-header .ap-image {
+    background: white;
+    margin-bottom: 0;
+    padding-bottom: 0; }
+  .column .column-header .date {
+    color: #999;
+    display: block;
+    margin-top: 15px; }
+  .column .column-header .approved-check {
+    display: inline-block;
+    float: right; }
+  .column .column-header .add-main-image {
+    cursor: pointer;
+    opacity: 0.7;
+    transition: 0.15s ease-in-out; }
+    .column .column-header .add-main-image:hover {
+      opacity: 1; }
+  .column .column-header .image-uploader {
+    background: #eee; }
+  .column .column-header .caption-input {
+    border: none;
+    -webkit-appearance: none;
+    outline: none;
+    border-bottom: 1px solid #ddd;
+    width: 100%;
+    line-height: 2; }
+  .column .column-header .close-link {
+    display: none; }
+  .column .column-header .active .close-link {
+    display: block; }
 
 hr.bottom {
   margin: 40px 0 20px; }
@@ -1230,17 +1261,12 @@ hr.bottom {
   .author-badge .black.banner.right {
     position: relative;
     font-size: 1.3em;
-    line-height: 30px; }
+    line-height: 36px;
+    padding-bottom: 4px; }
     .author-badge .black.banner.right .by {
       color: red; }
-    .author-badge .black.banner.right:after, .author-badge .black.banner.right:before {
-      border: black solid 15px; }
-    .author-badge .black.banner.right:after {
-      border: black solid 15px;
-      border-left-color: transparent;
-      border-bottom-color: none; }
     .author-badge .black.banner.right:before {
-      border: black solid 15px;
+      border: black solid 20px;
       border-left-color: transparent;
       border-top-color: none; }
   .author-badge .author-square {
@@ -1459,7 +1485,7 @@ a:hover {
 
 .home-column-sidebar {
   margin: 0;
-  max-height: 500px; }
+  max-height: 450px; }
 
 .home-column-sidebar.expanded {
   max-height: inherit;
@@ -1690,7 +1716,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .podcast_icons {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 20px;
   background: red; }
   .podcast_icons a.podcast_icon {
     color: white;
@@ -1762,7 +1788,16 @@ h1, h2, h3 {
     .lockerroom .lockerroom-header .title {
       font-size: 40px; }
   .column-sidebar {
-    position: relative; } }
+    position: relative; }
+  .column .column-header .byline {
+    display: inline-block;
+    margin: 15px 0 15px;
+    float: right; }
+  .column .column-header .date {
+    color: #999;
+    display: inline-block;
+    margin: 15px 0 15px;
+    float: left; } }
 
 @media (max-width: 480px) {
   .lines-button {
@@ -1891,8 +1926,13 @@ h1, h2, h3 {
     right: 10px;
     top: -10px;
     margin: 0; }
-  .column .column-header .title {
-    font-size: 30px; }
+  .column .column-header {
+    text-align: center; }
+    .column .column-header .title {
+      font-size: 30px; }
+    .column .column-header .date, .column .column-header .byline {
+      display: block;
+      float: none; }
   .column .subtitle {
     font-size: 18px; }
   .medium-article .headline .inner-content .copy h3 {
