--- a/views/lockerroom.ejs
+++ b/views/lockerroom.ejs
@@ -1,17 +1,108 @@
-<div class="medium-article lockerroom">
-	<div class="white banner right big uppercase"><h5><%= entry.type %>:</h5></div>
-	<div class="headline">
-		<div class="inner-content">
-			<div class="copy"><a href="/lockerroom/<%= entry.slug %>"><h3><%= entry.title %></h3></a></div>
+<%= include header %>
+
+	<div class="lockerroom-header" style="background-image: url(https://s3.amazonaws.com/footballbyfootball-dev/lockerroom/sansjags_backer.jpg);">
+
+		<h1 class="title">
+		<% if (lockerroom.main_image.image_url) { %>
+			<img src="https://s3.amazonaws.com/footballbyfootball-dev<%= lockerroom.main_image.image_url %>" />
+		<% } %>
+		<%= lockerroom.title %>
+		<% if (locals.user) { %>
+			<a href="/lockerroom/<%= lockerroom.slug %>/edit"> Edit</a>
+		<% } %><br><span class="subtitle">Click on the Circles to See Our Responses!</span></h1>
+		<div class="lockerroom-responses">
+			<span class="close-lockerroom-responses">×</span>
+			<span class="next-lockerroom-response"></span>
+			<span class="prev-lockerroom-response"></span>
+			<div class="container response-wrapper">		
+				<% lockerroom.lockerentries.forEach(function(entry, index) { %>
+					<div class="row response" id="<%= entry.player._id %>">
+						<span class="lockerroom-response-player">
+							<div class="author-image" style="background-image: url(<%= entry.player.image_url %>)"></div>
+							<div class="player-name"><%= entry.player.name %></div>
+						</span>
+						<div class="lockerroom-entry">
+							<div class="lockerrooom-entry-content cf">
+								<% entry.data.forEach(function(item){ %>
+									<% if (item.type == 'content') { %>
+										<%- item.content %>
+									<% } %>
+									<% if (item.type == 'image') { %>
+										<div class="caption-image <%= item.image_type %>">
+											<img src="https://s3.amazonaws.com/footballbyfootball-dev<%= item.image_url %>" />
+											<% if (item.caption) { %><p class="ap-image"><%= item.caption %></p><% } %>
+										</div>
+									<% } %>
+								<% }); %>
+							</div>
+
+						</div>
+					</div>
+
+				<% }); %>
+			</div>
+		</div>
+		<div class="lockerroom-controls">
+			<div class="locker-author-wrap">
+				<% lockerroom.lockerentries.forEach(function(entry, index) { %>
+					<div class="author-image-wrap">
+						<span class="lockerroom-response-control" data-id="<%= entry.player._id %>">
+							<div class="author-image" style="background-image: url(<%= entry.player.image_url %>)"></div>
+						</span>
+					</div>
+				<% });%>
+			</div>		
 		</div>
 	</div>
-</div>
-<div class="locker-authors">
-	<div class="locker-author-wrap">
-		<% entry.lockerentries.forEach(function(lockerentry){ %>
-		<div class="author-image-wrap">
-			<div class="author-image" style="background-image: url(<%= lockerentry.player.image_url %>)"></div>
+
+	<div class="lockerroom-content">
+		<div class="container">
+			<div class="col-md-8">
+				<% lockerroom.lockerentries.forEach(function(entry) { %>
+					<div class="row" id="<%= entry.player._id %>">
+						<div class="lockerroom-entry">
+							<div class="lockerrooom-entry-title">
+								Football <span class="by">by</span> <%= entry.player.name %>
+								<div class="author-image" style="background-image: url(<%= entry.player.image_url %>)"></div>
+							</div>
+							<div class="lockerrooom-entry-content cf">
+								<% entry.data.forEach(function(item){ %>
+									<% if (item.type == 'content') { %>
+										<%- item.content %>
+									<% } %>
+									<% if (item.type == 'image') { %>
+										<div class="caption-image <%= item.image_type %>">
+											<img src="https://s3.amazonaws.com/footballbyfootball-dev<%= item.image_url %>" />
+											<% if (item.caption) { %><p class="ap-image"><%= item.caption %></p><% } %>
+										</div>
+									<% } %>
+								<% }); %>
+							</div>
+						</div>
+					</div>
+				<% }); %>
+				<div class="row">
+    			<div id="disqus_thread"></div>
+					<script type="text/javascript">
+			        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+			        var disqus_shortname = 'footballbyfootball'; // required: replace example with your forum shortname
+
+			        /* * * DON'T EDIT BELOW THIS LINE * * */
+			        (function() {
+			            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+			            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+			            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+			        })();
+			    </script>
+			    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+			    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+			    
+				</div>
+			</div>
+			<div class="col-md-4">
+				<%= include lockerroom-sidebar %>
+			</div>
 		</div>
-		<% }); %>
 	</div>
-</div>
+
+<%= include footer %>
